chore: add some new styles for phone of slider

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                     width="240"
                     height="483"
                   />
+                  <div class="slider__iphone_vertical-home"></div>
+                  <div class="slider__iphone_vertical-pic"></div>
+                  <!-- <div class="slider__iphone_vertical-shadow"></div> -->
                 </div>
-                <div class="slider__iphone_vertical-home"></div>
-                <div class="slider__iphone_vertical-pic"></div>
-                <!-- <div class="slider__iphone_vertical-shadow"></div> -->
                 <div class="slider__iphone_horizontal">
                   <img
                     src="assets/img/slider/iphone-horizontal.svg"
@@ -112,23 +112,25 @@
                     width="483"
                     height="240"
                   />
+                  <div class="slider__iphone_horizontal-home"></div>
+                  <div class="slider__iphone_horizontal-pic"></div>
+                  <!-- <div class="slider__iphone_horizontal-shadow"></div> -->
                 </div>
-                <div class="slider__iphone_horizontal-home"></div>
-                <div class="slider__iphone_horizontal-pic"></div>
-                <!-- <div class="slider__iphone_horizontal-shadow"></div> -->
               </div>
               <div class="slider__iphone_middle phone">
-                <img
-                  src="assets/img/slider/iphone-middle.png"
-                  alt="Middle-Iphone"
-                  width="516"
-                  height="513"
-                />
-                <div class="slider__iphone_middle-home"></div>
-                <div class="slider__iphone_middle-pic"></div>
+                <div class="slider__iphone_triple">
+                  <img
+                    src="assets/img/slider/iphone-middle.png"
+                    alt="Middle-Iphone"
+                    width="516"
+                    height="513"
+                  />
+                  <div class="slider__iphone_middle-home"></div>
+                  <div class="slider__iphone_middle-pic"></div>
+                </div>
               </div>
+              <div class="slider__next arrow"></div>
             </div>
-            <div class="slider__next arrow"></div>
           </div>
         </div>
       </section>
