--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Singolo DOM</title>
+    <title>Singolo Responsive</title>
     <link rel="stylesheet" href="fonts.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./assets/img/favicon.png" type="image/png" />
   </head>
   <body>
     <svg style="display:none">
