feat: add responsive-375px

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
       <section id="home" class="home for-scroll">
         <div class="container">
           <div class="header__inner">
+            <div class="header__burger">
+              <a href="#">
+                <span></span>
+              </a>
+            </div>
             <h1 class="header__logo">Singolo<span>*</span></h1>
             <nav class="header__menu">
               <ul>
